kustomize/manifests/kubeflow/base/overlays/compute-tmox/common/istio-1-9-0/istio-install/base/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: '*.compute-tmox.network-tmox.neuralnetes.com.'
spec:
  type: LoadBalancer
